--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "index"
 author: "Assa Yeroslaviz"
-date: '`r format(Sys.time(), "%d %B, %Y")`'
+date: '**last update** - `r format(Sys.time(), "%d %B, %Y")`'
 output: html_document
 ---
 
@@ -18,49 +18,42 @@ The file will contains instruction on how to create a conda environment with the
 
 ## steps to do
 
-1. get the genomes and the annotations from the FTP server (I am using Ensembl)
-2. unpack them
-3. create an index for each needed mapper (in the snakemake file I am adding STAR, bowtie2, and bwa)
+**Preparing the genomes for mapping**
 
-4. map tha samples with the needed parameter.
+1. Download the genomes and the annotations from the FTP server (Ensembl genome builds are used here.)
+2. For each genome, an index for the `star` aligner is created.
 
-5. index the fastA file to create a chromSize file for the bigwig files.
-6. convert the bam files to wig and then to bigwig.
+This two steps are done only once, when the workflow was set-up. It only needs to be re-run, when a new organism is beinf added, or when newer version of exiting organisms are needed.
+
+**Mapping step** 
+
+3. Map tha samples with the needed parameter.
+4. Index the fastA file to create a `chromSize` file for the `bigwig` conversion.
+5. Convert the `bam` files to `wig` and then to `bigwig`.
 
 points to consider:
+If this is only a preliminary analysis - 
 
-1. would it make more sense to take only 50% of the fastq file for a faster analysis / visualization
-2. do they need the bam files also - deleting them would save a lot of storage space
+1. Would it make more sense to take only 50% of the fastq file for a faster analysis / visualization
+2. Do they need the bam files also - deleting them would save a lot of storage space
 
-The examples in this document are based on fictive data as well as a fictional project named Project0815. Whe na new project is done, this term must be changed with the proper name of the project, wherever it is mentioned.
+The examples in this document are based on fictive data as well as a fictional project named *Project0815*. When a new project is done, this term must be changed with the proper name of the project, wherever it is mentioned.
 
 ## folder structure
 
-each project must be stored in a specific folder struture for the workflow to work properly.
+The workflow works from within the folder of the concatenated `fastq` files created after running the `bcl2fastq` script from the project management website. 
 
-The convention for the naming in the MPIB Seqencing center is as such P01, P02, .. P135, ...
-Therefore the folder structure should be like that:
+* A `config` file is saved under `"/fs/pool/pool-bcfngs/scripts/config.yaml"`, where all the mapping and genome parameters are saved. 
+* The genome indexing step is run only once and creates a folder named `genomes/`  on the `"/fs/pool/pool-bcfngs/"`. Within this folder all the `fastA` and the `gtf` files are saved as well as a folder for each organims, containing the `star`-indexed files.
+* The mapping step expect to find within the working directory the files with the pattern *.conc.R1.fastq.gz* (As this is the current pattern given by the sequencing facility. If, in the future, this will be changed, the search pattern must be changed as well).
 
-```
-.
-├── Analysis
-├── rawData
-├── scripts
-└── genome
-```
+There are two seperate files for single-ended and paired-ended data sets. The single-ended one expects to find only  *.conc.R1.fastq.gz* , while the paired-end data set must also contain *.conc.R2.fastq.gz* files. 
 
-The only folder which must be created manually is the `rawData` folder where all the fastq files must be then saved.
+## Workflow
 
-```{r, engine='bash', eval=FALSE}
-mkdir -p Project0815/{rawData,Analysis,scripts,genome}
-```
+The workflow uses a combination of a `conda` environment with the `snakemake` tool (based on python). The advantage of `conda` is that it creates a container, separated from the rest of the tools installed on the system. This gives a better manangement and control over the tools used in the workflow, as well as less conflict potentials with other/older version of tools with non-compatible parameters. To learn more about the conda environment and its advantages, take a look at the [conda web site](https://conda.io/en/latest/).
 
-The workflow will use a combination of a `conda` environment with the `snakemake` tool (based on python). The advantage of `conda` is that it creates a container, separated from the rest of the tools installed on the system. This give a better menangment and control over the tools used in the workflow, as well as less conflict potentials with other/older version of tools with non-compatible parameters. To learn more about the conda environment and its advantages, take a look at the [conda web site](https://conda.io/en/latest/).
-
-`sankemake` offers a lot of advantages as well. It allows better controls over different steps of the analysis, easier automation of the workflow and reduce running time thorugh parallelization of he steps, just to mention some of them. to learn more about `snakemake` take a look [at the snakemake doc site](https://snakemake.readthedocs.io/en/stable/index.html).
-
-
-### workflow
+`snakemake` offers a lot of advantages as well. It allows better controls over different steps of the analysis, easier automation of the workflow and reduce running time thorugh parallelization of the steps, just to mention some of them. to learn more about `snakemake` take a look at [the snakemake doc site](https://snakemake.readthedocs.io/en/stable/index.html).
 
 - [conda](conda.html)
 - [snakemake](snakemake.html)
